--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,6 +24,45 @@ nav {
     width: 40%;
 }
 
+section{
+
+}
+
+.item {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    gap: 16px;
+    text-align: center;
+}
+
+.product {
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    min-height: 100px;
+    border: solid 1px;
+}
+
+.card-png {
+    height: 100%;
+    width: 100%;
+}
+
+.card-png img {
+    padding-top: 40px;
+    height: 80%;
+    width: 70%;
+}
+
+button {
+    padding: 3%;
+    margin-bottom: 3%;
+    background-color: blue;
+    color: white;
+}
+
 footer {
     background-color: #0082e6;
     display: flex;
