--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,8 +12,12 @@ nav {
 }
 
 .logo {
+    line-height: 80px;
+    margin: 0 10px;
+    text-align: center;
+    width: 100%;
     display: flex;
-    gap: 5%;
+    gap: 3%;
 }
 
 .logo img {
@@ -22,16 +26,16 @@ nav {
 
 .menu img {
     width: 40%;
+    line-height: 80px;
 }
 
-section{
-
+.hero {
+   
 }
 
 .item {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
+    grid-template-columns: 1fr;
     gap: 16px;
     text-align: center;
 }
@@ -42,7 +46,7 @@ section{
     flex-direction: column;
     text-align: center;
     min-height: 100px;
-    border: solid 1px;
+
 }
 
 .card-png {
@@ -53,22 +57,29 @@ section{
 .card-png img {
     padding-top: 40px;
     height: 80%;
-    width: 70%;
+    width: 20%;
+}
+
+.bttn {
+    padding: 7px;
 }
 
 button {
-    padding: 3%;
+    padding: 1%;
     margin-bottom: 3%;
-    background-color: blue;
+    background-color: black;
     color: white;
+    border-radius: 4px;
 }
 
 footer {
     background-color: #0082e6;
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    text-align: center;
 }
 
 .social img {
-    width: 5%;
+    width: 3%;
 }
