--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,19 +13,19 @@
         'main-area main-area'
         'footer-area footer-area';
     grid-template-columns: 100% 1fr;
-    grid-template-rows: 10% 1fr 10%;
+    grid-template-rows: 40% 1fr 10%;
 }
 
 nav {
-    height: 80px;
     grid-area: header-area;
     background-color: #00579c;
     display: flex;
 }
 
 .logo {
+    line-height: 80px;
     margin: 0 10px;
-    align-items: center;
+    text-align: center;
     width: 100%;
     display: flex;
     gap: 10px;
@@ -38,11 +38,10 @@ nav {
 
 .menu {
     padding-top: 15px;
-    align-items: center;
 }
 
 .menu img {
-    width: 35%;
+    width: 40%;
 }
 
 .menu-content {
@@ -117,7 +116,6 @@ border: solid 1px black;
 }
 
 footer {
-    font-size: x-small;
     grid-area: footer-area;
     color: white;
     background-color: #012f6b;
