--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,14 +6,14 @@
     box-sizing: border-box;
 }
 
-.container{
+.container {
     display: grid;
     grid-template-areas:
         'header-area header-area'
         'main-area main-area'
         'footer-area footer-area';
     grid-template-columns: 100% 1fr;
-    grid-template-rows: 40% 1fr 10%;
+    grid-template-rows: 40% 1fr 15%;
 }
 
 nav {
@@ -112,7 +112,7 @@ table {
 }
 
 th {
-border: solid 1px black;
+    border: solid 1px rgb(202, 202, 202);
 }
 
 footer {
@@ -125,9 +125,10 @@ footer {
     text-align: center;
 }
 
-.social{
-    margin-top: 1%;
+.social {
+    margin-top: 2%;
 }
+
 .social img {
-    width: 2%;
+    width: 3%;
 }
